# ops

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: example.ope.json  hello.sh
src/: globals.cpp  globals.hpp  main.cpp  process.cpp  process.hpp  tools.cpp  tools.hpp
src/ope/: get.cpp  get.hpp  local_exec.cpp  local_exec.hpp  put.cpp  put.hpp  remote_exec.cpp  remote_exec.hpp  rsync_to.cpp  rsync_to.hpp
